--- a/css/produto.css
+++ b/css/produto.css
@@ -226,7 +226,15 @@ body{
       
      
     }
-      /* IMAGENS PRODUTOS - KART -------> .escola #cap */
+       /* IMAGENS PRODUTOS - KART */
+
+       .escola #cap-capacetekart{
+        margin-right: 30%;
+        margin-left: 5%;
+        margin-top: 1%;
+        margin-bottom: 5%;
+         width: 50%;
+       }
 
 
       
