--- a/css/produto.css
+++ b/css/produto.css
@@ -196,7 +196,7 @@ body{
     
    
     .escola{
-      text-align: center;
+      text-align: justify;
       margin-right: 1%;
       margin-left: 1%;
       margin-top: 1%;
@@ -213,6 +213,7 @@ body{
       margin-left: 1%;
       margin-top: 1%;
       margin-bottom: 1%;
+      text-align: center;
     }
     
 
@@ -739,6 +740,7 @@ body{
     width: 120px;
     padding: 12px;
     font-weight: bold;
+    align-items: center;
 }
 
 #butao:hover{
@@ -760,96 +762,3 @@ body{
   
 
     
-
-    
-    
-    /* .card__image {      
-      width: 100%;
-      height: 50%;
-      border-radius: 10%
-    } */
-    
-    /* .card__overlay {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      z-index: 1;      
-      border-radius: calc(var(--curve) * 1px);    
-      background-color: #050309;      
-      transform: translateY(100%);
-      transition: .2s ease-in-out;
-    } */
-    
-    /* .card:hover .card__overlay {
-      transform: translateY(0);
-    } */
-    
-    /* .card__header {
-      position: relative;
-      display: flex;
-      align-items: center;
-      gap: 2em;
-      padding: 2em;
-      border-radius: calc(var(--curve) * 1px) 0 0 0;    
-      background-color: #050309;
-      transform: translateY(-100%);
-      transition: .2s ease-in-out;
-    }
-    
-    .card__arc {
-      width: 80px;
-      height: 80px;
-      position: absolute;
-      bottom: 100%;
-      right: 0;      
-      z-index: 1;
-    } */
-    
-    /* .card__arc path {
-      fill: #050309;
-      display: path("M 40 80 c 22 0 40 -22 40 -40 v 40 Z");
-    }       
-    
-    .card:hover .card__header {
-      transform: translateY(0);
-    }
-    
-    .card__thumb {
-      flex-shrink: 0;
-      width: 50px;
-      height: 50px;      
-      border-radius: 50%;      
-    }
-    
-    .card__title {
-      font-size: 1em;
-      margin: 0 0 .3em;
-      color: white;
-    }
-    
-    .card__tagline {
-      display: block;
-      margin: 1em 0;
-      font-family: "MockFlowFont";  
-      font-size: .8em; 
-      color: white;
-    }
-    
-    .card__status {
-      font-size: .8em;
-      color: white;
-    }
-    
-    .card__description {
-      padding: 0 2em 2em;
-      margin: 0;
-      color: white;
-      font-family: "MockFlowFont";   
-      display: -webkit-box;
-      -webkit-box-orient: vertical;
-      -webkit-line-clamp: 3;
-      overflow: hidden;
-    }     */
-
-  
