--- a/estilo.css
+++ b/estilo.css
@@ -44,12 +44,48 @@ footer{
   margin: 0;
 
 }
- 
 footer li{
   list-style-type: none;
   display: flex;
 }
- 
+
+.pay{
+    width: 50%;
+  margin-left: 30px;
+
+}
+
+.pagamentos{
+  width: 100%;
+  margin-top: 20px;
+}
+li a {
+  display: block;
+  color: white;
+  /* text-align: left; */
+  padding: 15px;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+
+footer li{
+  list-style-type: none;
+  display: flex;
+}
+
+.pay{
+    width: 50%;
+  margin-left: 30px;
+
+}
+
+.pagamentos{
+  width: 100%;
+  margin-top: 20px;
+}
+
+
  
 .navegador{
  
@@ -61,6 +97,7 @@ footer li{
   overflow: hidden;
  
 }
+
 
 .navegador-pgs{
   border-bottom: 2px solid #e8f1f2;
@@ -86,7 +123,7 @@ li {
   float: left;
 }
 .cadlog:hover{
-  background-color: #1b98e0;
+  color: #1b98e0;
   padding: 16.6px;
   border-radius: 0.75em;
 }
@@ -134,6 +171,7 @@ header{
   text-align: center;
   font-weight: bold;
   font-size: x-large;
+  
 }
 
 header img{
@@ -286,7 +324,7 @@ header img{
     right: 0;
     z-index: 1;      
     border-radius: calc(var(--curve) * 1px);    
-    background-color: #050309;      
+    background-color: #13293d;      
     transform: translateY(100%);
     transition: .2s ease-in-out;
   }
