--- a/estilo.css
+++ b/estilo.css
@@ -1,404 +1,411 @@
 body {
-margin: 0;
-  /* background-color: #1b98e0; */
-  font-family: 'Noto Sans JP', sans-serif;
- 
-}
-
-.background{
-  background-image: url(./img/imgfundo.jpg);
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  
-}
-
-
-.proorp{
-  padding: 2%;
-  text-align: center;
-  justify-items: center;
-  color: white;
-}
- 
-.title{
-  height: 170px;
-  padding: 50px;
-}
- 
-nav{
-  position: sticky;
-  top: 0;
-  z-index: 3;
-}
-
-
-
- 
- 
-footer{
-  background-color: #13293d;
-  border-top: 2px solid #e8f1f2;
-  padding: 2%;
-  color: #e8f1f2;
-  display: flex;
   margin: 0;
-
-}
-footer li{
-  list-style-type: none;
-  display: flex;
-}
-
-.pay{
-    width: 50%;
-  margin-left: 30px;
-
-}
-
-.pagamentos{
-  width: 100%;
-  margin-top: 20px;
-}
-li a {
-  display: block;
-  color: white;
-  /* text-align: left; */
-  padding: 15px;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-
-footer li{
-  list-style-type: none;
-  display: flex;
-}
-
-.pay{
-    width: 50%;
-  margin-left: 30px;
-
-}
-
-.pagamentos{
-  width: 100%;
-  margin-top: 20px;
-}
-
-
- 
-.navegador{
- 
-  border-bottom: 2px solid #e8f1f2;
-  background-color:#13293d;
-  list-style-type: none;
-  margin: 0;
-  padding: 16px;
-  overflow: hidden;
- 
-}
-
-
-.navegador-pgs{
-  border-bottom: 2px solid #e8f1f2;
-  background-color:#13293d;
-  list-style-type: none;
-  margin: 0;
-  padding: 16px;
-  overflow: hidden;
-}
-
-.header-pgs{
-  background-color: #13293d;
-  color: #e8f1f2;
-  padding: 20px;
-  margin-bottom: -5px;
-  text-align: center;
-  font-weight: bold;
-  font-size: x-large;
-}
- 
- 
-li {
-  float: left;
-}
-.cadlog:hover{
-  color: #1b98e0;
-  padding: 16.6px;
-  border-radius: 0.75em;
-}
-
-.cadlog-cl{
-  margin-right: 6px;
-
-}
-
-.cadlog-cl:hover{
-  background-color: #1b98e0;
-  padding: 16.6px;
-  border-radius: 0.75em;
-}
- 
- 
-ul input{
-  float: center;
-  padding: 6px 10px;
-  margin-top: 8px;
-  margin-right: 16px;
-  background: #ddd;
-  font-size: 17px;
-  border: none;
-  cursor: pointer;
-}
- 
-li a {
-  display: block;
-  color: white;
-  /* text-align: left; */
-  padding: 15px;
-  text-decoration: none;
-  font-weight: bold;
-  font-family: Arial, Helvetica, sans-serif;
-}
- 
- 
- 
-header{
-  background-color: #13293d;
-  color: #e8f1f2;
-  padding: 20px;
-  margin-bottom: -5px;
-  text-align: center;
-  font-weight: bold;
-  font-size: x-large;
-  
-}
-
-header img{
-  width: 35%;
-}
- 
-  .prev, .next {
-    cursor: pointer;
-    position: absolute;
-    margin-right: 1px;
-    top: 50%;
-    width: auto;
-    padding: 20px;
-    margin-top: 0;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-    margin-right: -7px;
-  }
- 
-  
-  .next {
-    right: 0.5%;
-    border-radius: 3px 0 0 3px;
+    /* background-color: #1b98e0; */
+    font-family: 'Noto Sans JP', sans-serif;
+   
   }
   
-  .prev:hover, .next:hover {
-    background-color: #1b98e0;
+  .background{
+    background-image: url(./img/imgfundo.jpg);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
     
   }
   
-  .text {
-    color: #f2f2f2;
-    font-size: 15px;
-    padding: 8px 12px;
-    position: absolute;
-    bottom: 8px;
-    width: 100%;
+  
+  .proorp{
+    padding: 2%;
     text-align: center;
+    justify-items: center;
+    color: white;
   }
-  
-  .numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
+   
+  .title{
+    height: 170px;
+    padding: 50px;
+  }
+   
+  nav{
+    position: sticky;
     top: 0;
+    z-index: 3;
   }
   
-  .dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #e8f1f2;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
+  .icon{
+    width: 60%;
   }
   
-  .active, .dot:hover {
+   
+   
+  footer{
     background-color: #13293d;
+    border-top: 2px solid #e8f1f2;
+    padding: 2%;
+    color: #e8f1f2;
+    display: flex;
+    margin: 0;
+  
+  }
+  footer li{
+    list-style-type: none;
+    display: flex;
+  }
+  
+  .pay{
+      width: 50%;
+    margin-left: 30px;
+  
+  }
+  
+  .pagamentos{
+    width: 100%;
+    margin-top: 20px;
+  }
+  li a {
+    display: block;
+    color: white;
+    /* text-align: left; */
+    padding: 15px;
+    text-decoration: none;
+    font-weight: bold;
+  }
+  
+  
+  footer li{
+    list-style-type: none;
+    display: flex;
+  }
+  
+  .pay{
+      width: 50%;
+    margin-left: 30px;
+  
+  }
+  
+  .pagamentos{
+    width: 100%;
+    margin-top: 20px;
+  }
+  
+  
+   
+  .navegador{
+   
+    border-bottom: 2px solid #e8f1f2;
+    background-color:#13293d;
+    list-style-type: none;
+    margin: 0;
+    padding: 16px;
+    overflow: hidden;
    
   }
-  .activec{
-    background: #13293d;
+  
+  
+  .navegador-pgs{
+    border-bottom: 2px solid #e8f1f2;
+    background-color:#13293d;
+    list-style-type: none;
+    margin: 0;
+    padding: 16px;
+    overflow: hidden;
+  }
+  
+  .header-pgs{
+    background-color: #13293d;
+    color: #e8f1f2;
+    padding: 20px;
+    margin-bottom: -5px;
+    text-align: center;
+    font-weight: bold;
+    font-size: x-large;
+  }
+  
+  .mySlides img{
+    border-bottom: 2px solid #e8f1f2;
+  }
+   
+   
+  li {
+    float: left;
+  }
+  .cadlog:hover{
+    color: #1b98e0;
+    padding: 16.6px;
     border-radius: 0.75em;
   }
-
   
-
-  .activec img{
-    position: absolute;
-    width: 30px;
-    margin-left: -12px;
-    margin-top: -6px;
-    
+  .cadlog-cl{
+    margin-right: 6px;
+  
   }
   
-  .fade {
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 1.5s;
-    animation-name: fade;
-    animation-duration: 1.5s;
+  .cadlog-cl:hover{
+    color:  #1b98e0;
+    padding: 16.6px;
+    border-radius: 0.75em;
   }
-  
-  @-webkit-keyframes fade {
-    from {opacity: .4} 
-    to {opacity: 1}
-  }
-  
-  @keyframes fade {
-    from {opacity: .4} 
-    to {opacity: 1}
-  }
-  
-  @media only screen and (max-width: 485px) {
-    .prev, .next,.text {font-size: 11px}
-    .img-logo{
-      width: 100%;
-    }
-  }
- 
-  :root {
-    --surface-color: #fff;
-    --curve: 40;
-  }
-  
-  * {
-    box-sizing: border-box;
-  }
-  
-  
-  
-  .cards {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 2rem;
-    margin: 4rem 5vw;
-    padding: 0;
-    list-style-type: none;
    
+   
+  ul input{
+    float: center;
+    padding: 6px 10px;
+    margin-top: 8px;
+    margin-right: 16px;
+    background: #ddd;
+    font-size: 17px;
+    border: none;
+    cursor: pointer;
   }
-  
- 
-  
-  .card {
-    position: relative;
+   
+  li a {
     display: block;
-    height: 100%;  
-    border-radius: calc(var(--curve) * 1px);
-    overflow: hidden;
+    color: white;
+    /* text-align: left; */
+    padding: 15px;
     text-decoration: none;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+   
+   
+   
+  header{
     background-color: #13293d;
-  }
-  
-  .card__image {      
-    width: 100%;
-    height: auto;
-    border-radius: 10%;
-  }
-  
-  .card__overlay {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;      
-    border-radius: calc(var(--curve) * 1px);    
-    background-color: #13293d;      
-    transform: translateY(100%);
-    transition: .2s ease-in-out;
-  }
-  
-  .card:hover .card__overlay {
-    transform: translateY(0);
-  }
-  
-  .card__header {
-    position: relative;
-    display: flex;
-    align-items: center;
-    gap: 2em;
-    padding: 2em;
-    border-radius: calc(var(--curve) * 1px) 0 0 0;    
-    background-color: #13293d;
-    transform: translateY(-100%);
-    transition: .2s ease-in-out;
-  }
- 
-  
-  .card__arc {
-    width: 80px;
-    height: 80px;
-    position: absolute;
-    bottom: 100%;
-    right: 0;      
-    z-index: 1;
-  }
-  
-  .card__arc path {
-    fill: #050309;
-    d: path("M 40 80 c 22 0 40 -22 40 -40 v 40 Z");
-  }       
-  
-  .card:hover .card__header {
-    transform: translateY(0);
-  }
-  
-  .card__thumb {
-    flex-shrink: 0;
-    width: 50px;
-    height: 50px;      
-    border-radius: 50%;      
-  }
-  
-  .card__title {
-    font-size: 1em;
-    margin: 0 0 .3em;
-    color: white;
-  }
-  
-  .card__tagline {
-    display: block;
-    margin: 1em 0;
-    font-family: "MockFlowFont";  
-    font-size: .8em; 
-    color: white;
-  }
-  
-  .card__status {
-    font-size: .8em;
-    color: white;
-  }
-  
-  .card__description {
-    padding: 0 2em 2em;
-    margin: 0;
     color: #e8f1f2;
-    background-color: #13293d;
-    font-family: "MockFlowFont";   
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 3;
-    overflow: hidden;
+    padding: 20px;
+    margin-bottom: -5px;
+    text-align: center;
+    font-weight: bold;
+    font-size: x-large;
     
-  }   
+  }
+  
+  header img{
+    width: 35%;
+  }
+   
+    .prev, .next {
+      cursor: pointer;
+      position: absolute;
+      margin-right: 1px;
+      top: 50%;
+      width: auto;
+      padding: 20px;
+      margin-top: 0;
+      color: white;
+      font-weight: bold;
+      font-size: 18px;
+      transition: 0.6s ease;
+      border-radius: 0 3px 3px 0;
+      user-select: none;
+      margin-right: -7px;
+    }
+   
+    
+    .next {
+      right: 0.5%;
+      border-radius: 3px 0 0 3px;
+    }
+    
+    .prev:hover, .next:hover {
+      background-color: #1b98e0;
+      
+    }
+    
+    .text {
+      color: #f2f2f2;
+      font-size: 15px;
+      padding: 8px 12px;
+      position: absolute;
+      bottom: 8px;
+      width: 100%;
+      text-align: center;
+    }
+    
+    .numbertext {
+      color: #f2f2f2;
+      font-size: 12px;
+      padding: 8px 12px;
+      position: absolute;
+      top: 0;
+    }
+    
+    .dot {
+      cursor: pointer;
+      height: 15px;
+      width: 15px;
+      margin: 0 2px;
+      background-color: #e8f1f2;
+      border-radius: 50%;
+      display: inline-block;
+      transition: background-color 0.6s ease;
+    }
+    
+    .active, .dot:hover {
+      background-color: #13293d;
+     
+    }
+    .activec{
+      background: #13293d;
+      border-radius: 0.75em;
+    }
+  
+    
+  
+    .activec img{
+      position: absolute;
+      width: 30px;
+      margin-left: -12px;
+      margin-top: -6px;
+      
+    }
+    
+    .fade {
+      -webkit-animation-name: fade;
+      -webkit-animation-duration: 1.5s;
+      animation-name: fade;
+      animation-duration: 1.5s;
+    }
+    
+    @-webkit-keyframes fade {
+      from {opacity: .4} 
+      to {opacity: 1}
+    }
+    
+    @keyframes fade {
+      from {opacity: .4} 
+      to {opacity: 1}
+    }
+    
+    @media only screen and (max-width: 485px) {
+      .prev, .next,.text {font-size: 11px}
+      .img-logo{
+        width: 100%;
+      }
+    }
+   
+    :root {
+      --surface-color: #fff;
+      --curve: 40;
+    }
+    
+    * {
+      box-sizing: border-box;
+    }
+    
+    
+    
+    .cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 2rem;
+      margin: 4rem 5vw;
+      padding: 0;
+      list-style-type: none;
+     
+    }
+    
+   
+    
+    .card {
+      position: relative;
+      display: block;
+      height: 100%;  
+      border-radius: calc(var(--curve) * 1px);
+      overflow: hidden;
+      text-decoration: none;
+      background-color: #13293d;
+    }
+    
+    .card__image {      
+      width: 100%;
+      height: auto;
+      border-radius: 10%;
+    }
+    
+    .card__overlay {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      z-index: 1;      
+      border-radius: calc(var(--curve) * 1px);    
+      background-color: #13293d;      
+      transform: translateY(100%);
+      transition: .2s ease-in-out;
+    }
+    
+    .card:hover .card__overlay {
+      transform: translateY(0);
+    }
+    
+    .card__header {
+      position: relative;
+      display: flex;
+      align-items: center;
+      gap: 2em;
+      padding: 2em;
+      border-radius: calc(var(--curve) * 1px) 0 0 0;    
+      background-color: #13293d;
+      transform: translateY(-100%);
+      transition: .2s ease-in-out;
+    }
+   
+    
+    .card__arc {
+      width: 80px;
+      height: 80px;
+      position: absolute;
+      bottom: 100%;
+      right: 0;      
+      z-index: 1;
+    }
+    
+    .card__arc path {
+      fill: #050309;
+      d: path("M 40 80 c 22 0 40 -22 40 -40 v 40 Z");
+    }       
+    
+    .card:hover .card__header {
+      transform: translateY(0);
+    }
+    
+    .card__thumb {
+      flex-shrink: 0;
+      width: 50px;
+      height: 50px;      
+      border-radius: 50%;      
+    }
+    
+    .card__title {
+      font-size: 1em;
+      margin: 0 0 .3em;
+      color: white;
+    }
+    
+    .card__tagline {
+      display: block;
+      margin: 1em 0;
+      font-family: "MockFlowFont";  
+      font-size: .8em; 
+      color: white;
+    }
+    
+    .card__status {
+      font-size: .8em;
+      color: white;
+    }
+    
+    .card__description {
+      padding: 0 2em 2em;
+      margin: 0;
+      color: #e8f1f2;
+      background-color: #13293d;
+      font-family: "MockFlowFont";   
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 3;
+      overflow: hidden;
+      
+    }   
+  
