--- a/css/produto.css
+++ b/css/produto.css
@@ -1,7 +1,6 @@
 body{
-  
-  margin: 0%;
- 
+   margin: 0%;
+ background-color: #e7e7e7;
 }
 
 .nominho{
@@ -196,16 +195,17 @@ body{
     
    
     .escola{
-      text-align: justify;
-      margin-right: 1%;
-      margin-left: 1%;
-      margin-top: 1%;
+      background-color: #fff;
+      text-align: center;
+      margin-right: 5%;
+      margin-left: 5%;
+      margin-top: 5%;
       margin-bottom: 1%;
       border-radius: 6px;
-      height: 500%;
-      width: 98%;
+      
+      width: 90%;
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       font-family: monospace;
     }
     .cards {
@@ -223,12 +223,17 @@ body{
     /* <--------> IMAGENS OUTLET <--------> */
 
     /* BALACLAVAS OUTLET */
+    
       .escola #balaclava1{
-      margin-right: 30%;
-      margin-left: 5%;
-      margin-top: 1%;
-      margin-bottom: 5%; 
-      width: 40%;
+        padding-top: 25px;
+        padding-bottom: 25px;
+        padding-left: 40px;
+        padding-right: 40px;
+        margin-right: 55%;
+        margin-left: 80%;
+        margin-top: 1%;
+        margin-bottom: 5%; 
+        width: 200%;
       }
       .escola #balaclava2{
       margin-right: 30%;
@@ -655,55 +660,64 @@ body{
           
         }
 
+    .nome-prod{
+      font-size: 25.5px;
+      text-align: left;
+      font-family: 'calibri';
+      margin-right: 25%;   
+    }
 
-
-          
-          
-          
-        
-        
+    .preco-prod{
+      font-family: 'calibri';
+      padding: 15px;
+      padding-left: 56%;
+      border-radius: 0.5em;
+      background-color: #e7e7e7;
       
+    }
 
-
-      
-      
-      
-     
-    
-
-  .descrito{
-    color: white;
-    width: 90%;
+    .descrito{
+      border: 1px solid #13293d;
+      align-items: center;
+      color: #13293d;
+      width: 300%;
     /* border: 4px solid #1b98e0; */
+    padding: 20px;
     margin-top: 1%;
     margin-bottom: 1%;
-    margin-right: 1%;
-    padding: 20px;
+    margin-left: 35%;
+    margin-right: 10%;
+    
+  
     display: flex;
-    justify-content: center;
+    overflow: hidden;
+    
     font-size: 30px;
     
   }
   #tamanho{
+    width: 25%;
     font-size: large;
     color: white;
     background: #13293d;
     outline: none;
     border: 2px solid #1b98e0;
-    border-radius: 2px;
+    border-radius: 0.60em;
+    margin-left: 40%;
+    cursor: pointer;
   }
 
 
   /* DESCRIÇAO */
   #titulo{
-    color: white;
+    color: #13293d;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
   }
       #desconto{
         font-family: Arial, Helvetica, sans-serif;
         font-size: 10px;
-        color:white
+        color:#13293d
    
       }
       #cor{
@@ -721,12 +735,12 @@ body{
   #descricao{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
-    color: white;
+    color: #13293d;
   }
   #conteudo{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12px;
-    color: white;
+    color: #13293d;
     line-height: 0,5%;
   }
   #butao{
